local-dev/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finflow
  labels:
    app.kubernetes.io/part-of: finflow
---
apiVersion: v1
kind: Namespace
metadata:
  name: finflow-kafka
---
apiVersion: v1
kind: Namespace
metadata:
  name: finflow-monitoring
